--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.13.0",
+    "co-sleep": "0.0.1",
     "crypto": "0.0.3",
     "koa": "^1.2.4",
     "koa-router": "^5.0.0",
     "lodash": "^4.17.4",
+    "md5": "^2.2.1",
     "mongoose": "^4.8.1",
     "query-string": "^4.3.1",
     "request": "^2.79.0",
