--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "co-sleep": "0.0.1",
     "crypto": "0.0.3",
     "koa": "^1.2.4",
+    "koa-body-parser": "^1.1.2",
     "koa-router": "^5.0.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
