--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "koa-router": "^5.0.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
+    "moment": "^2.17.1",
     "mongoose": "^4.8.1",
     "query-string": "^4.3.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "socket.io": "^1.7.2"
+    "sleep-promise": "^2.0.0",
+    "socket.io": "^1.7.2",
+    "ubique": "^0.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
