--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "babel-preset-stage-2": "^6.13.0",
     "co-sleep": "0.0.1",
     "crypto": "0.0.3",
-    "koa": "^1.2.4",
-    "koa-bodyparser": "^2.3.0",
-    "koa-router": "^5.0.0",
+    "koa": "^2.0.0-alpha.7",
+    "koa-bodyparser": "^3.2.0",
+    "koa-router": "^7.0.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
