--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec \"babel-node index.js\""
+    "dev-babel": "nodemon --exec \"babel-node index.js\"",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
